assets/css/section_onboarding.css
.section_onboarding_wrapper{
  width: 100%;
  height: 100%;
  background-color: #283344;
  -webkit-user-select: none;
  user-select: none;
}

.section_onboarding_wrapper text{
  cursor: default;
}

.svg_wrapper_onboarding{
  width: 100%;
  height: 100%;

  padding-bottom:60px;
}

.svg_wrapper_onboarding > svg{
  width:100%;
  overflow: visible;
}

.onboarding_skip_button{
  position: absolute;
  font-family: "Fira_Sans";
  font-weight: 300;
  bottom: 0;
  left: 50%;
  opacity: .5;
  color: white;
  font-size: 1.6rem;
  transform: translateX(-50%);
  cursor: pointer;
}

.onboarding_skip_button:hover{
  opacity: .8;
}

.svg_wrapper_pagination{
  width: 19rem;
  height: 2rem;
  position: absolute;
  bottom: 5rem;
  left: 50%;
  transform: translateX(-50%);
}

.svg_wrapper_pagination svg{
  width: 100%;
}

#pagination{
  width: 100%;
  height: auto;
}

.next_button_onboarding{
  width: 30rem;
  position: absolute;
  bottom: 8rem;
  left: 50%;
  transform: translateX(-50%);
}

.section_onboarding_wrapper .mozilla_button{
  margin: .5rem 0; 
}

